[package]
name = "pdf_text"
version = "0.1.0"
edition = "2021"
authors = ["Sebastian Köln <s3bk@protonmail.com>"]
keywords = ["pdf", "text", "extract"]
license = "MIT"
description = "PDF text extraction"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.pdf]
default-features=false 
features = ["cache", "dump"]
git = "https://github.com/pdf-rs/pdf"

[dependencies]
# pdf_render= { git = "https://github.com/videni/pdf_render_with_vello.git", branch="vello_wip"}
pdf_render= { path = "../pdf_render/render"}

itertools = "*"
log = "*"
ordered-float = "*"
serde = { version = "*", features = ["derive"] }
unicode-normalization = "0.1.19"
font = { git = "https://github.com/pdf-rs/font", branch = "vello", features=['cff']}

pathfinder_geometry = { git = "https://github.com/servo/pathfinder" }
pathfinder_color = { git = "https://github.com/servo/pathfinder" }
pathfinder_content = { git = "https://github.com/servo/pathfinder" }
table = { git = "https://github.com/s3bk/table", features = ["serde"] }
